@@ -26,6 +26,10 @@ HISTORY
 
   ++ Bugfixes:
 
+  2016-12-16: Thomas Mueller
+  * api_lib.c: fixed race condition in return value of netconn_gethostbyname()
+    (and thus also lwip_gethostbyname/_r() and lwip_getaddrinfo())
+
   2016-12-15: David van Moolenbroek
   * opt.h, tcp: added LWIP_HOOK_TCP_ISN() to implement less predictable initial
     sequence numbers (see contrib/addons/tcp_isn for an example implementation)
